hphp/hack/test/typecheck/reactive/parse_missing_reactivity1.php
<?hh // strict

interface I {}

class C {
  <<__OnlyRxIfImpl(I::class)>>
  public function f(): void {}
}
